# effective_c_cpp

./: README.md  create_chapter_folder.py  勘误表.md
.devcontainer/: Dockerfile
chapter 01/: foo.cpp  foo.s  output_from_objdump_debug_info.txt  output_from_readelf_debug_dump.txt
chapter 03/: mem_corruption_p48.cpp
chapter 04/: foo.cpp  objects_p71.cpp  story.cpp
chapter 05/: my_malloc_inject.cpp  objects.cpp
chapter 06/: get_linker_map_p165.cpp  guid_compare_p167.cpp
chapter 07/: atomic_long.cpp
chapter 08/: intall_rr.sh  print_cache.cpp
chapter 09/: attatch.sh  watch_ref.py
chapter 10/: accutrack  mem_check.c
chapter 11/: core_analyzer
chapter 12/: packet_counter.c
chapter 12/story5/: CMakeLists.txt  build.sh  build_dlopen.sh  header.h  main.cpp  main_dlopen.cpp  shared_library.cpp
chapter 12/story6/: main.cpp
chapter 14/: code1.cpp  code2.cpp  code3.cpp  code4.cpp  prog_279.cpp
chapter 15/: CMakeLists.txt  build.sh  co_await_example.cpp
chapter 17/: Dockerfile
